--- a/index.html
+++ b/index.html
@@ -92,76 +92,62 @@
 		<!-- Services section -->
 		<div class="section">
 			<div class="container">
+				<div class="row">
+					<div class="col-12 col-sm-10 col-md-8 col-lg-7">
+						<h2 class="font-weight-light margin-bottom-60">Features</h2>
+					</div>
+				</div><!-- end row -->
+
 				<div class="row icon-5xl text-center">
+					
 					<!-- Icon text box 1 -->
 					<div class="col-12 col-md-4">
 						<i class="ti-star text-dark"></i>
-						<h5 class="font-weight-normal margin-top-20">Social Marketing</h5>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
+						<h5 class="font-weight-normal margin-top-20">Contactless Issuance</h5>
 					</div>
 					<!-- Icon text box 2 -->
 					<div class="col-12 col-md-4">
 						<i class="ti-blackboard text-dark"></i>
-						<h5 class="font-weight-normal margin-top-20">Strategy Planning</h5>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
+						<h5 class="font-weight-normal margin-top-20">Cross-Industry</h5>
 					</div>
 					<!-- Icon text box 3 -->
 					<div class="col-12 col-md-4">
 						<i class="ti-comment-alt text-dark"></i>
-						<h5 class="font-weight-normal margin-top-20">Consulting</h5>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
+						<h5 class="font-weight-normal margin-top-20">Achieving targets of SDG 4, SDG8,SDG13</h5>
+					</div>
+					<!-- Icon text box 4 -->
+					<div class="col-12 col-md-4">
+						<i class="ti-comment-alt text-dark"></i>
+						<h5 class="font-weight-normal margin-top-20">Efficiency / Cheap and Fast</h5>
+					</div>
+					<!-- Icon text box 5 -->
+					<div class="col-12 col-md-4">
+						<i class="ti-comment-alt text-dark"></i>
+						<h5 class="font-weight-normal margin-top-20">Prevent Forge</h5>
+					</div>
+					<!-- Icon text box 6 -->
+					<div class="col-12 col-md-4">
+						<i class="ti-comment-alt text-dark"></i>
+						<h5 class="font-weight-normal margin-top-20">Saved Forever</h5>
 					</div>
 				</div><!-- end row -->
 			</div><!-- end container -->
 		</div>
 		<!-- end Services section -->
+
 		<!-- About section -->
-		<div class="section">
+		<div class="section About">
 			<div class="container">
+				<!-- 
 				<div class="row">
 					<div class="col-12 col-sm-10 col-md-8 col-lg-7">
-						<h2 class="font-weight-light margin-0">Features</h2>
+						<h2 class="font-weight-light margin-0">Total</h2>
 					</div>
-				</div><!-- end row -->
-				<div class="row col-spacing-20 margin-top-70">
-					<div class="col-12 col-lg-4">
-						<div class="hoverbox-6 border-radius-0375">
-							<img src="assets/images/col-1-square.jpg" alt="">
-							<div class="content">
-								<h5>Contactless Issuance</h5>
-								<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
-							</div>
-							<div class="hover-content">
-								<a class="button button-lg button-outline-white-2 button-rounded" href="#">Learn More</a>
-							</div>
-						</div>
-					</div>
-					<div class="col-12 col-lg-4">
-						<div class="hoverbox-6 border-radius-0375">
-							<img src="assets/images/col-1-square.jpg" alt="">
-							<div class="content">
-								<h5>Achieving targets of SDG 4, SDG8,SDG13</h5>
-								<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
-							</div>
-							<div class="hover-content">
-								<a class="button button-lg button-outline-white-2 button-rounded" href="#">Learn More</a>
-							</div>
-						</div>
-					</div>
-					<div class="col-12 col-lg-4">
-						<div class="hoverbox-6 border-radius-0375">
-							<img src="assets/images/col-1-square.jpg" alt="">
-							<div class="content">
-								<h5>Save time/Cost Reducation</h5>
-								<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
-							</div>
-							<div class="hover-content">
-								<a class="button button-lg button-outline-white-2 button-rounded" href="#">Learn More</a>
-							</div>
-						</div>
-					</div>
-				</div><!-- end row -->
-				<div class="row row-space-between margin-top-70">
+				</div>-->
+				<!-- end row -->
+			
+				
+				<div class="row row-space-between margin-top-20">
 					<!-- Counter box 1 -->
 					<div class="col-12 col-sm-6 col-md-4 col-lg-2">
 						<span class="font-weight-light counter margin-0 span-h2">8000</span>
@@ -201,8 +187,9 @@
 			</div>
 		</div>
 		<!-- end Parallax section -->
-<!-- About section -->
-<div class="section">
+
+<!-- Usage section -->
+<div class="section Usage">
 	<div class="container">
 		<div class="row">
 			<div class="col-12 col-sm-10 col-md-8 col-lg-7">
@@ -212,7 +199,7 @@
 		<div class="row col-spacing-20 margin-top-70">
 			<div class="col-12 col-lg-4">
 				<div class="hoverbox-6 border-radius-0375">
-					<img src="assets/images/col-1-square.jpg" alt="">
+					<img src="assets/images/col-1.jpg" alt="">
 					<div class="content">
 						<h5>Educational Circles</h5>
 						<p>Transcript, Diploma,Certificate of achievement, etc…</p>
@@ -224,19 +211,19 @@
 			</div>
 			<div class="col-12 col-lg-4">
 				<div class="hoverbox-6 border-radius-0375">
-					<img src="assets/images/col-1-square.jpg" alt="">
+					<img src="assets/images/col-1.jpg" alt="">
 					<div class="content">
 						<h5>Real Estate Industry</h5>
 						<p>Architectural plan, Contract , Land Certificates etc…</p>
 					</div>
 					<div class="hover-content">
-						<a class="button button-lg button-outline-white-2 button-rounded" href="#">Learn More</a>
+						<a class="button button-lg button-outline-white-2 button-rounded" href="https://twitter.com/e27co/status/1384789870581669892?s=20">Learn More</a>
 					</div>
 				</div>
 			</div>
 			<div class="col-12 col-lg-4">
 				<div class="hoverbox-6 border-radius-0375">
-					<img src="assets/images/col-1-square.jpg" alt="">
+					<img src="assets/images/col-1.jpg" alt="">
 					<div class="content">
 						<h5>Medical Industry</h5>
 						<p>Medical Record, Medical Certificates,etc…</p>
@@ -248,7 +235,7 @@
 			</div>
 			<div class="col-12 col-lg-4">
 				<div class="hoverbox-6 border-radius-0375">
-					<img src="assets/images/col-1-square.jpg" alt="">
+					<img src="assets/images/col-1.jpg" alt="">
 					<div class="content">
 						<h5>Company</h5>
 						<p>Employment Agreement, Minutes, Serial nuber of products, etc…</p>
@@ -260,7 +247,7 @@
 			</div>
 			<div class="col-12 col-lg-4">
 				<div class="hoverbox-6 border-radius-0375">
-					<img src="assets/images/col-1-square.jpg" alt="">
+					<img src="assets/images/col-1.jpg" alt="">
 					<div class="content">
 						<h5>Compatibility</h5>
 						<p>Please contact us to find out the best way to use our service in your company!</p>
@@ -274,7 +261,7 @@
 		
 	</div><!-- end container -->
 </div>
-<!-- end About section -->
+<!-- end Usage section -->
 
 		<!-- Testimonial Awards section -->
 		<div class="section">
