try to fix div class color

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 		<!-- end Services section -->
 
 		<!-- About section -->
-		<div class="section About">
+		<div class="section about">
 			<div class="container">
 				<!-- 
 				<div class="row">
@@ -189,7 +189,7 @@
 		<!-- end Parallax section -->
 
 <!-- Usage section -->
-<div class="section Usage">
+<div class="section usage">
 	<div class="container">
 		<div class="row">
 			<div class="col-12 col-sm-10 col-md-8 col-lg-7">
