add our team, edit our clients

--- a/about-us.html
+++ b/about-us.html
@@ -98,80 +98,84 @@
 		</div>
 		<!-- end About section -->
 
-		<!-- Services section -->
-		<div class="section padding-top-0">
-			<div class="container">
-				<div class="row col-spacing-20 icon-5xl">
-					<div class="col-12 col-lg-4">
-						<div class="border-all border-radius-05 padding-30 padding-x-lg-40 padding-y-lg-50">
-							<i class="ti-star text-dark"></i>
-							<h5 class="font-weight-normal margin-top-20">Branding</h5>
-							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
-						</div>
-					</div>
-					<div class="col-12 col-lg-4">
-						<div class="border-all border-radius-05 padding-30 padding-x-lg-40 padding-y-lg-50">
-							<i class="ti-announcement text-dark"></i>
-							<h5 class="font-weight-normal margin-top-20">Marketing</h5>
-							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
-						</div>
-					</div>
-					<div class="col-12 col-lg-4">
-						<div class="border-all border-radius-05 padding-30 padding-x-lg-40 padding-y-lg-50">
-							<i class="ti-comment-alt text-dark"></i>
-							<h5 class="font-weight-normal margin-top-20">Consulting</h5>
-							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
-						</div>
-					</div>
-				</div><!-- end row -->
-			</div><!-- end container -->
-		</div>
-		<!-- end Services section -->
-
-		<!-- Clients section -->
+		<!-- Team section -->
 		<div class="section padding-top-0">
 			<div class="container">
 				<div class="margin-bottom-70 text-center">
 					<div class="row">
 						<div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2 col-xl-6 offset-xl-3">
-							<h2 class="font-weight-light">Meet Our Clients</h2>
+							<h2 class="font-weight-light">Our Team</h2>
 							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
 						</div>
 					</div>
 				</div>
-				<div class="row">
-					<div class="col-12 col-lg-10 offset-lg-1">
-						<ul class="clients-grid column-4">
-							<li>
-								<a href="#"><img src="assets/images/col-5.jpg" alt=""></a>
-							</li>
-							<li>
-								<a href="#"><img src="assets/images/col-5.jpg" alt=""></a>
-							</li>
-							<li>
-								<a href="#"><img src="assets/images/col-5.jpg" alt=""></a>
-							</li>
-							<li>
-								<a href="#"><img src="assets/images/col-5.jpg" alt=""></a>
-							</li>
-							<li>
-								<a href="#"><img src="assets/images/col-5.jpg" alt=""></a>
-							</li>
-							<li>
-								<a href="#"><img src="assets/images/col-5.jpg" alt=""></a>
-							</li>
-							<li>
-								<a href="#"><img src="assets/images/col-5.jpg" alt=""></a>
-							</li>
-							<li>
-								<a href="#"><img src="assets/images/col-5.jpg" alt=""></a>
-							</li>
-						</ul>
+				<div class="row text-center">
+					<div class="col-12 col-md-6 col-lg-4">
+						<div class="border-radius padding-30 box-shadow-with-hover">
+							<img class="img-circle-md" src="assets/images/img-circle-medium.jpg" alt="">
+							<div class="margin-top-30">
+								<h6 class="font-weight-normal margin-0 line-height-140">Robert Vincent</h6>
+								<span class="font-small font-weight-normal">Founder</span>
+								<p class="margin-top-10">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
+							</div>
+						</div>
 					</div>
-				</div><!-- end row -->
-			</div><!-- end container -->
+					<div class="col-12 col-md-6 col-lg-4">
+						<div class="border-radius padding-30 box-shadow-with-hover">
+							<img class="img-circle-md" src="assets/images/img-circle-medium.jpg" alt="">
+							<div class="margin-top-30">
+								<h6 class="font-weight-normal margin-0 line-height-140">Brenda Johnson</h6>
+								<span class="font-small font-weight-normal">Co-Founder</span>
+								<p class="margin-top-10">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-md-6 col-lg-4">
+						<div class="border-radius padding-30 box-shadow-with-hover">
+							<img class="img-circle-md" src="assets/images/img-circle-medium.jpg" alt="">
+							<div class="margin-top-30">
+								<h6 class="font-weight-normal margin-0 line-height-140">Rodney Scott</h6>
+								<span class="font-small font-weight-normal">Manager</span>
+								<p class="margin-top-10">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-md-6 col-lg-4">
+						<div class="border-radius padding-30 box-shadow-with-hover">
+							<img class="img-circle-md" src="assets/images/img-circle-medium.jpg" alt="">
+							<div class="margin-top-30">
+								<h6 class="font-weight-normal margin-0 line-height-140">Michelle White</h6>
+								<span class="font-small font-weight-normal">Marketer</span>
+								<p class="margin-top-10">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-md-6 col-lg-4">
+						<div class="border-radius padding-30 box-shadow-with-hover">
+							<img class="img-circle-md" src="assets/images/img-circle-medium.jpg" alt="">
+							<div class="margin-top-30">
+								<h6 class="font-weight-normal margin-0 line-height-140">Alice Trumbo</h6>
+								<span class="font-small font-weight-normal">Designer</span>
+								<p class="margin-top-10">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-md-6 col-lg-4">
+						<div class="border-radius padding-30 box-shadow-with-hover">
+							<img class="img-circle-md" src="assets/images/img-circle-medium.jpg" alt="">
+							<div class="margin-top-30">
+								<h6 class="font-weight-normal margin-0 line-height-140">Thomas Willis</h6>
+								<span class="font-small font-weight-normal">Developer</span>
+								<p class="margin-top-10">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- end row -->
+			</div>
 		</div>
-		<!-- end Clients section -->
+
+		<!-- end Team section -->
 
 		<!-- Testimonial section -->
 		<div class="section padding-top-0">
@@ -187,13 +191,6 @@
 								<h5 class="font-weight-normal line-height-140 margin-0">Emiley Haley</h5>
 								<span class="font-small font-weight-normal">Manager - Mono</span>
 							</div>
-							<div class="d-inline-block text-yellow">
-								<i class="fas fa-star"></i>
-								<i class="fas fa-star"></i>
-								<i class="fas fa-star"></i>
-								<i class="fas fa-star"></i>
-								<i class="fas fa-star"></i>
-							</div>
 						</div>
 						<p>"Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus."</p>
 					</div>
@@ -203,13 +200,6 @@
 							<div class="d-block d-lg-inline-block margin-bottom-10">
 								<h5 class="font-weight-normal line-height-140 margin-0">Robert Vincent</h5>
 								<span class="font-small font-weight-normal">Marketer - Mono</span>
-							</div>
-							<div class="d-inline-block text-yellow">
-								<i class="fas fa-star"></i>
-								<i class="fas fa-star"></i>
-								<i class="fas fa-star"></i>
-								<i class="fas fa-star"></i>
-								<i class="fas fa-star"></i>
 							</div>
 						</div>
 						<p>"Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus."</p>
@@ -221,13 +211,6 @@
 								<h5 class="font-weight-normal line-height-140 margin-0">Andrew Palmer</h5>
 								<span class="font-small font-weight-normal">Developer - Mono</span>
 							</div>
-							<div class="d-inline-block text-yellow">
-								<i class="fas fa-star"></i>
-								<i class="fas fa-star"></i>
-								<i class="fas fa-star"></i>
-								<i class="fas fa-star"></i>
-								<i class="fas fa-star"></i>
-							</div>
 						</div>
 						<p>"Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus."</p>
 					</div>
@@ -237,13 +220,6 @@
 							<div class="d-block d-lg-inline-block margin-bottom-10">
 								<h5 class="font-weight-normal line-height-140 margin-0">Rodney Scott</h5>
 								<span class="font-small font-weight-normal">Designer - Mono</span>
-							</div>
-							<div class="d-inline-block text-yellow">
-								<i class="fas fa-star"></i>
-								<i class="fas fa-star"></i>
-								<i class="fas fa-star"></i>
-								<i class="fas fa-star"></i>
-								<i class="fas fa-star"></i>
 							</div>
 						</div>
 						<p>"Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus."</p>
