--- a/index.html
+++ b/index.html
@@ -370,50 +370,44 @@
 		<!-- Clients section -->
 		<div class="section bg-grey-lighter">
 			<div class="container">
-				<div class="owl-carousel" data-owl-nav="true" data-owl-dots="false" data-owl-margin="50" data-owl-autoplay="true" data-owl-xs="1" data-owl-sm="2" data-owl-md="3" data-owl-lg="4" data-owl-xl="5">
-					<!-- Client box 1 -->
-					<div class="client-box">
-						<a href="#">
-							<img src="assets/images/col-5.jpg" alt="">
-						</a>
+				<div class="margin-bottom-70 text-center">
+					<div class="row">
+						<div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2 col-xl-6 offset-xl-3">
+							<h2 class="font-weight-light">Our Clients</h2>
+							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
+						</div>
 					</div>
-					<!-- Client box 2 -->
-					<div class="client-box">
-						<a href="#">
-							<img src="assets/images/col-5.jpg" alt="">
-						</a>
+				</div>
+				<div class="row">
+					<div class="col-12 col-lg-10 offset-lg-1">
+						<ul class="clients-grid column-4">
+							<li>
+								<a href="#"><img src="assets/images/col-5.jpg" alt=""></a>
+							</li>
+							<li>
+								<a href="#"><img src="assets/images/col-5.jpg" alt=""></a>
+							</li>
+							<li>
+								<a href="#"><img src="assets/images/col-5.jpg" alt=""></a>
+							</li>
+							<li>
+								<a href="#"><img src="assets/images/col-5.jpg" alt=""></a>
+							</li>
+							<li>
+								<a href="#"><img src="assets/images/col-5.jpg" alt=""></a>
+							</li>
+							<li>
+								<a href="#"><img src="assets/images/col-5.jpg" alt=""></a>
+							</li>
+							<li>
+								<a href="#"><img src="assets/images/col-5.jpg" alt=""></a>
+							</li>
+							<li>
+								<a href="#"><img src="assets/images/col-5.jpg" alt=""></a>
+							</li>
+						</ul>
 					</div>
-					<!-- Client box 3 -->
-					<div class="client-box">
-						<a href="#">
-							<img src="assets/images/col-5.jpg" alt="">
-						</a>
-					</div>
-					<!-- Client box 4 -->
-					<div class="client-box">
-						<a href="#">
-							<img src="assets/images/col-5.jpg" alt="">
-						</a>
-					</div>
-					<!-- Client box 5 -->
-					<div class="client-box">
-						<a href="#">
-							<img src="assets/images/col-5.jpg" alt="">
-						</a>
-					</div>
-					<!-- Client box 6 -->
-					<div class="client-box">
-						<a href="#">
-							<img src="assets/images/col-5.jpg" alt="">
-						</a>
-					</div>
-					<!-- Client box 7 -->
-					<div class="client-box">
-						<a href="#">
-							<img src="assets/images/col-5.jpg" alt="">
-						</a>
-					</div>
-				</div><!-- end owl-carousel -->
+				</div><!-- end row -->
 			</div><!-- end container -->
 		</div>
 		<!-- end Clients section -->
@@ -425,8 +419,8 @@
 						<div class="col-12 col-md-6">
 							<h2>Turing Chain Ltd.</h2>
 							<ul class="list-inline-dash margin-top-30">
-								<li><a href="Information Security Policy.html">Information Security Policy</a></li>
-								<li><a href="#">Privacy Policy</a></li>
+								<li><a href="information-security-policy.html">Information Security Policy</a></li>
+								<li><a href="privacy-policy.html">Privacy Policy</a></li>
 							</ul>
 							<p class="margin-top-10">&copy; 2021 Turing Chain Limited, All Rights Reserved.</p>
 						</div>
