add images, h2 text-center

--- a/about-us.html
+++ b/about-us.html
@@ -83,7 +83,7 @@
 				<div class="row col-spacing-60 align-items-center">
 					<div class="col-12 col-lg-6">
 						<a class="lightbox-media-box border-radius-05">
-							<img src="assets/images/col-1.jpg" alt="">
+							<img src="assets/images/turing_SUN6636.jpg" alt="">
 						</a>
 					</div>
 					<div class="col-12 col-lg-6">
