--- a/index.html
+++ b/index.html
@@ -51,10 +51,7 @@
 							</ul>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Cooperation</a>
-							<ul class="nav-dropdown">
-								<li class="nav-dropdown-item"><a class="nav-dropdown-link" href="#">Annoucements</a></li>
-							</ul>
+							<a class="nav-link" href="https://testing-global.turingcerts.com/en/login">Issue Now</a>
 						</li>
 					</ul>
 				</div>
@@ -79,7 +76,8 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-12 col-md-10 offset-md-2 col-lg-8 offset-lg-4 text-md-right">
-							<h1 class="display-6 font-weight-semi-bold margin-0">Your Blockchain-based Resume<br>for One-click Verify</h1>
+							<h1 class="display-6 font-weight-semi-bold margin-0">Zero Paper, Zero Fraud, <br>Sustainable Society</h1>
+							<p>One-stop service to issue, manage, and verify digital credentials on blockchain for everyone.</p>
 							<div class="buttons">
 								<button class="btn-hover color-1">Login</button>
 								</div>
@@ -92,10 +90,12 @@
 		<!-- Services section -->
 		<div class="section">
 			<div class="container">
+				<div class="text-center">
 				<div class="row">
-					<div class="col-12 col-sm-10 col-md-8 col-lg-7">
+					<div class="col-12 col-sm-12 col-md-12 col-lg-12">
 						<h2 class="font-weight-light margin-bottom-60">Features</h2>
 					</div>
+				</div>
 				</div><!-- end row -->
 
 				<div class="row icon-5xl text-center">
@@ -103,32 +103,32 @@
 					<!-- Icon text box 1 -->
 					<div class="col-12 col-md-4">
 						<i class="ti-star text-dark"></i>
-						<h5 class="font-weight-normal margin-top-20">Contactless Issuance</h5>
+						<h5 class="font-weight-normal margin-top-20">Save cost by 87%.</h5>
 					</div>
 					<!-- Icon text box 2 -->
 					<div class="col-12 col-md-4">
 						<i class="ti-blackboard text-dark"></i>
-						<h5 class="font-weight-normal margin-top-20">Cross-Industry</h5>
+						<h5 class="font-weight-normal margin-top-20">Save time by 50%.</h5>
 					</div>
 					<!-- Icon text box 3 -->
 					<div class="col-12 col-md-4">
 						<i class="ti-comment-alt text-dark"></i>
-						<h5 class="font-weight-normal margin-top-20">Achieving targets of SDG 4, SDG8,SDG13</h5>
+						<h5 class="font-weight-normal margin-top-20">Prioritize privacy with GDPR compliance.</h5>
 					</div>
 					<!-- Icon text box 4 -->
 					<div class="col-12 col-md-4">
 						<i class="ti-comment-alt text-dark"></i>
-						<h5 class="font-weight-normal margin-top-20">Efficiency / Cheap and Fast</h5>
+						<h5 class="font-weight-normal margin-top-20">Protect confidentiality with ISO 27001 license.</h5>
 					</div>
 					<!-- Icon text box 5 -->
 					<div class="col-12 col-md-4">
 						<i class="ti-comment-alt text-dark"></i>
-						<h5 class="font-weight-normal margin-top-20">Prevent Forge</h5>
+						<h5 class="font-weight-normal margin-top-20">Reduce paper usage by 100%.</h5>
 					</div>
 					<!-- Icon text box 6 -->
 					<div class="col-12 col-md-4">
 						<i class="ti-comment-alt text-dark"></i>
-						<h5 class="font-weight-normal margin-top-20">Saved Forever</h5>
+						<h5 class="font-weight-normal margin-top-20">Reduce carbon emission by 98%.</h5>
 					</div>
 				</div><!-- end row -->
 			</div><!-- end container -->
@@ -138,12 +138,13 @@
 		<!-- About section -->
 		<div class="section about">
 			<div class="container">
-				<!-- 
+				<div class="text-center">
 				<div class="row">
-					<div class="col-12 col-sm-10 col-md-8 col-lg-7">
-						<h2 class="font-weight-light margin-0">Total</h2>
+					<div class="col-12 col-sm-12 col-md-12 col-lg-12">
+						<h2 class="font-weight-light margin-bottom-50">Impact</h2>
 					</div>
-				</div>-->
+				</div>
+				</div>
 				<!-- end row -->
 			
 				
@@ -189,17 +190,20 @@
 		<!-- end Parallax section -->
 
 <!-- Usage section -->
-<div class="section usage">
+<div class="section whom">
 	<div class="container">
+		<div class="text-center">
 		<div class="row">
-			<div class="col-12 col-sm-10 col-md-8 col-lg-7">
-				<h2 class="font-weight-light margin-0">Usage Scenerio</h2>
+			<div class="col-12 col-sm-12 col-md-12 col-lg-12">
+				<h2 class="font-weight-light margin-0">Whom we can help</h2>
 			</div>
-		</div><!-- end row -->
+		</div>
+		</div>
+		<!-- end row -->
 		<div class="row col-spacing-20 margin-top-70">
 			<div class="col-12 col-lg-4">
 				<div class="hoverbox-6 border-radius-0375">
-					<img src="assets/images/col-1.jpg" alt="">
+					<img src="assets/images/pexels-max-fischer-5212345.jpg" alt="">
 					<div class="content">
 						<h5>Educational Circles</h5>
 						<p>Transcript, Diploma,Certificate of achievement, etc…</p>
@@ -211,7 +215,8 @@
 			</div>
 			<div class="col-12 col-lg-4">
 				<div class="hoverbox-6 border-radius-0375">
-					<img src="assets/images/col-1.jpg" alt="">
+					<img src="assets/images/pexels-david-mcbee-1546168.jpg" alt="">
+					<!--<img src="assets/images/pexels-timur-saglambilek-87223.jpg" alt="">-->
 					<div class="content">
 						<h5>Real Estate Industry</h5>
 						<p>Architectural plan, Contract , Land Certificates etc…</p>
@@ -223,7 +228,7 @@
 			</div>
 			<div class="col-12 col-lg-4">
 				<div class="hoverbox-6 border-radius-0375">
-					<img src="assets/images/col-1.jpg" alt="">
+					<img src="assets/images/pexels-zen-chung-5529604.jpg" alt="">
 					<div class="content">
 						<h5>Medical Industry</h5>
 						<p>Medical Record, Medical Certificates,etc…</p>
@@ -235,7 +240,7 @@
 			</div>
 			<div class="col-12 col-lg-4">
 				<div class="hoverbox-6 border-radius-0375">
-					<img src="assets/images/col-1.jpg" alt="">
+					<img src="assets/images/pexels-daian-gan-102127.jpg" alt="">
 					<div class="content">
 						<h5>Company</h5>
 						<p>Employment Agreement, Minutes, Serial nuber of products, etc…</p>
@@ -247,7 +252,20 @@
 			</div>
 			<div class="col-12 col-lg-4">
 				<div class="hoverbox-6 border-radius-0375">
-					<img src="assets/images/col-1.jpg" alt="">
+					<img src="assets/images/pexels-football-wife-1618200.jpg" alt="">
+					<div class="content">
+						<h5>Sports</h5>
+						<p>We collect all kinds of competition records, training records and career achievements of athletes in an incorruptible and reliable system, making it easier to do performance analysis or formulate effective training plans for athletes.</p>
+					</div>
+					<div class="hover-content">
+						<a class="button button-lg button-outline-white-2 button-rounded" href="#">Contact Us</a>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-12 col-lg-4">
+				<div class="hoverbox-6 border-radius-0375">
+					<img src="assets/images/pexels-football-wife-1618200.jpg" alt="">
 					<div class="content">
 						<h5>Compatibility</h5>
 						<p>Please contact us to find out the best way to use our service in your company!</p>
@@ -266,26 +284,28 @@
 		<!-- Testimonial Awards section -->
 		<div class="section">
 			<div class="container">
+				<div class="text-center">
 				<div class="row">
-					<div class="col-12 col-sm-10 col-md-8 col-lg-7">
+					<div class="col-12 col-sm-12 col-md-12 col-lg-12">
 						<h2 class="font-weight-light margin-0">Awards</h2>
 					</div>
+				</div>
 				</div><!-- end row -->
-				<div class="testimonial-grid column-1 margin-top-70">
+				<div class="testimonial-grid column-1 margin-top-50">
 					<!-- Testimonial box 1 -->
 					<div class="testimonial-grid-box">
 						<div class="testimonial-img">
-							<img src="assets/images/img-circle-small.jpg" alt="">
+							<img src="assets/images/award_1.png" alt="">
 						</div>
 						<div class="testimonial-content">
-							<h5 class="font-weight-normal margin-top-10">500 startups in Kobe | 2021</h5>
-							<p class="margin-bottom-10">500 startups in Kobe</p>
+							<h5 class="font-weight-normal margin-top-10">Alibaba Entrepreneurship Fund X HSBC JUMPSTARTER | 2020</h5>
+							<p class="margin-bottom-10">Top 5 Startups & Best Innovation Awards</p>
 						</div>
 					</div>
 					<!-- Testimonial box 2 -->
 					<div class="testimonial-grid-box">
 						<div class="testimonial-img">
-							<img src="assets/images/img-circle-small.jpg" alt="">
+							<img src="assets/images/award_2.png" alt="">
 						</div>
 						<div class="testimonial-content">
 							<h5 class="font-weight-normal margin-top-10">Google Hatcher | 2021</h5>
@@ -295,73 +315,34 @@
 					<!-- Testimonial box 3 -->
 					<div class="testimonial-grid-box">
 						<div class="testimonial-img">
-							<img src="assets/images/img-circle-small.jpg" alt="">
+							<img src="assets/images/award_3.png" alt="">
 						</div>
 						<div class="testimonial-content">
-							<h5 class="font-weight-normal margin-top-10">International Entreprenuer G Camp Training Program | 2021</h5>
-							<p class="margin-bottom-10">Top 2 Startups</p>
+							<h5 class="font-weight-normal margin-top-10">Draper University | 20??</h5>
+							<p class="margin-bottom-10">????????????</p>
 						</div>
 					</div>
 					<!-- Testimonial box 4 -->
 					<div class="testimonial-grid-box">
 						<div class="testimonial-img">
-							<img src="assets/images/img-circle-small.jpg" alt="">
+							<img src="assets/images/award_4.png" alt="">
 						</div>
 						<div class="testimonial-content">
-							<h5 class="font-weight-normal margin-top-10">Alibaba Entrepreneurship Fund X HSBC JUMPSTARTER | 2020</h5>
-							<p class="margin-bottom-10">Top 5 Startups & Best Innovation Awards</p>
+							<h5 class="font-weight-normal margin-top-10">E27 | 20??</h5>
+							<p class="margin-bottom-10">????????????</p>
 						</div>
 					</div>
 					<!-- Testimonial box 5 -->
 					<div class="testimonial-grid-box">
 						<div class="testimonial-img">
-							<img src="assets/images/img-circle-small.jpg" alt="">
+							<img src="assets/images/award_5.png" alt="">
 						</div>
 						<div class="testimonial-content">
-							<h5 class="font-weight-normal margin-top-10">Taiwan National Applied Research Laboratories's Vision Program Awards | 2020</h5>
-							<p class="margin-bottom-10">Top 10 Startups & Singapore Delegate Team</p>
+							<h5 class="font-weight-normal margin-top-10">SkyDeck | 20??</h5>
+							<p class="margin-bottom-10">????????????</p>
 						</div>
 					</div>
-					<!-- Testimonial box 6 -->
-					<div class="testimonial-grid-box">
-						<div class="testimonial-img">
-							<img src="assets/images/img-circle-small.jpg" alt="">
-						</div>
-						<div class="testimonial-content">
-							<h5 class="font-weight-normal margin-top-10">Microsoft Imagine Cup | 2020</h5>
-							<p class="margin-bottom-10">5th Place in North Americas</p>
-						</div>
-					</div>
-					<!-- Testimonial box 7 -->
-					<div class="testimonial-grid-box">
-						<div class="testimonial-img">
-							<img src="assets/images/img-circle-small.jpg" alt="">
-						</div>
-						<div class="testimonial-content">
-							<h5 class="font-weight-normal margin-top-10">Taiwan Ministry of Science and Technology's National FITI Startup Awards | 2019</h5>
-							<p class="margin-bottom-10">The Best Startups & 2-Million-NTD Prize</p>
-						</div>
-					</div>
-					<!-- Testimonial box 8 -->
-					<div class="testimonial-grid-box">
-						<div class="testimonial-img">
-							<img src="assets/images/img-circle-small.jpg" alt="">
-						</div>
-						<div class="testimonial-content">
-							<h5 class="font-weight-normal margin-top-10">Google SingularityU APAC Global Impact Challenge | 2019</h5>
-							<p class="margin-bottom-10">Top 4 Startups</p>
-						</div>
-					</div>
-					<!-- Testimonial box 9 -->
-					<div class="testimonial-grid-box">
-						<div class="testimonial-img">
-							<img src="assets/images/img-circle-small.jpg" alt="">
-						</div>
-						<div class="testimonial-content">
-							<h5 class="font-weight-normal margin-top-10">UC Berkeley Free Ventures Batch XIII | 2019</h5>
-							<p class="margin-bottom-10">The 5 Selected Startups</p>
-						</div>
-					</div>
+
 				</div>
 			</div><!-- end container -->
 		</div>
@@ -370,11 +351,10 @@
 		<!-- Clients section -->
 		<div class="section bg-grey-lighter">
 			<div class="container">
-				<div class="margin-bottom-70 text-center">
+				<div class="margin-bottom-50 text-center">
 					<div class="row">
 						<div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2 col-xl-6 offset-xl-3">
 							<h2 class="font-weight-light">Our Clients</h2>
-							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
 						</div>
 					</div>
 				</div>
