test add media link

--- a/media.html
+++ b/media.html
@@ -82,15 +82,14 @@
 					<!-- Masonry Item 1 -->
 					<div class="masonry-item">
 						<div class="hoverbox-9 margin-bottom-20">
-							<a href="#">
+							<a href="https://etico.iiep.unesco.org/fr/node/7957">
 								<img src="assets/images/col-2-square.jpg" alt="">
 								<div class="content bg-black-04">
-									<span class="font-family-tertiary font-small font-weight-normal uppercase text-white">Feb 6</span>
+									<span class="font-family-tertiary font-small font-weight-normal uppercase text-white">New</span>
 								</div>
 							</a>
 						</div>
-						<h5 class="font-weight-normal"><a href="#">Blog Post with Image</a></h5>
-						<p>Aenean commodo ligula eget dolor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus...</p>
+						<h5 class="font-weight-normal"><a href="https://etico.iiep.unesco.org/fr/node/7957">TuringCerts combats fraud with blockchain-powered certificate validation</a></h5>
 					</div>
 					<!-- Masonry Item 2 -->
 					<div class="masonry-item">
