--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							</ul>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="https://testing-global.turingcerts.com/en/login">Issue Now</a>
+							<a class="nav-link" href="https://global.turingcerts.com/en/login">Issue Now</a>
 						</li>
 					</ul>
 				</div>
@@ -76,7 +76,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-12 col-md-10 offset-md-2 col-lg-8 offset-lg-4 text-md-right">
-							<h1 class="display-6 font-weight-semi-bold margin-0">Zero Paper, Zero Fraud, <br>Sustainable Society</h1>
+							<h1 class="display-6 font-weight-semi-bold margin-0">Zero Fraud, Zero Paper, <br>Sustainable Society</h1>
 							<p>One-stop service to issue, manage, and verify digital credentials on blockchain for everyone.</p>
 							<div class="buttons">
 								<button class="btn-hover color-1">Login</button>
@@ -103,32 +103,32 @@
 					<!-- Icon text box 1 -->
 					<div class="col-12 col-md-4">
 						<i class="ti-star text-dark"></i>
-						<h5 class="font-weight-normal margin-top-20">Save cost by 87%.</h5>
+						<h5 class="font-weight-normal margin-top-20">Save cost by 86%</h5>
 					</div>
 					<!-- Icon text box 2 -->
 					<div class="col-12 col-md-4">
 						<i class="ti-blackboard text-dark"></i>
-						<h5 class="font-weight-normal margin-top-20">Save time by 50%.</h5>
+						<h5 class="font-weight-normal margin-top-20">Prioritize privacy with GDPR compliance</h5>
 					</div>
 					<!-- Icon text box 3 -->
 					<div class="col-12 col-md-4">
 						<i class="ti-comment-alt text-dark"></i>
-						<h5 class="font-weight-normal margin-top-20">Prioritize privacy with GDPR compliance.</h5>
+						<h5 class="font-weight-normal margin-top-20">Reduce paper usage by 100%</h5>
 					</div>
 					<!-- Icon text box 4 -->
 					<div class="col-12 col-md-4">
 						<i class="ti-comment-alt text-dark"></i>
-						<h5 class="font-weight-normal margin-top-20">Protect confidentiality with ISO 27001 license.</h5>
+						<h5 class="font-weight-normal margin-top-20">Save time by 50%</h5>
 					</div>
 					<!-- Icon text box 5 -->
 					<div class="col-12 col-md-4">
 						<i class="ti-comment-alt text-dark"></i>
-						<h5 class="font-weight-normal margin-top-20">Reduce paper usage by 100%.</h5>
+						<h5 class="font-weight-normal margin-top-20">Protect confidentiality with ISO 27001 license</h5>
 					</div>
 					<!-- Icon text box 6 -->
 					<div class="col-12 col-md-4">
 						<i class="ti-comment-alt text-dark"></i>
-						<h5 class="font-weight-normal margin-top-20">Reduce carbon emission by 98%.</h5>
+						<h5 class="font-weight-normal margin-top-20">Reduce carbon emission by 98%</h5>
 					</div>
 				</div><!-- end row -->
 			</div><!-- end container -->
@@ -151,7 +151,7 @@
 				<div class="row row-space-between margin-top-20">
 					<!-- Counter box 1 -->
 					<div class="col-12 col-sm-6 col-md-4 col-lg-2">
-						<span class="font-weight-light counter margin-0 span-h2">8000</span>
+						<span class="font-weight-light counter margin-0 span-h2">13000</span>
 						<span class="font-weight-light margin-0 span-h2">+</span>
 						<h6 class="font-small font-weight-normal uppercase">Certificates</h6>
 					</div>
