edit banner, RWD

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		<!-- end Header -->
 
 		<!-- Hero section -->
-		<div class="bg-image parallax" data-bg-src="assets/images/banner.png">
+		<div class="banner bg-image parallax" data-bg-src="assets/images/banner-bg.png">
 			<div class="section-2xl bg-black-05 text-center">
 				<div class="container">
 					<div class="row">
@@ -80,7 +80,10 @@
 							<p>One-stop service to issue, manage, and verify digital credentials on blockchain for everyone.</p>
 							<div class="buttons">
 								<button class="btn-hover color-1">Login</button>
-								</div>
+							</div>
+						</div>
+						<div class="banner-logo col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
+							<img src="assets/images/banner-logo.png" alt="">
 						</div>
 					</div><!-- end row -->
 				</div><!-- end container -->
@@ -291,11 +294,11 @@
 					</div>
 				</div>
 				</div><!-- end row -->
-				<div class="testimonial-grid column-1 margin-top-50">
+				<div class="awards testimonial-grid column-1 margin-top-50">
 					<!-- Testimonial box 1 -->
 					<div class="testimonial-grid-box">
 						<div class="testimonial-img">
-							<img src="assets/images/award_1.png" alt="">
+							<img src="assets/images/awards_1.png" alt="">
 						</div>
 						<div class="testimonial-content">
 							<h5 class="font-weight-normal margin-top-10">Alibaba Entrepreneurship Fund X HSBC JUMPSTARTER | 2020</h5>
@@ -305,7 +308,7 @@
 					<!-- Testimonial box 2 -->
 					<div class="testimonial-grid-box">
 						<div class="testimonial-img">
-							<img src="assets/images/award_2.png" alt="">
+							<img src="assets/images/awards_2.png" alt="">
 						</div>
 						<div class="testimonial-content">
 							<h5 class="font-weight-normal margin-top-10">Google Hatcher | 2021</h5>
@@ -315,7 +318,7 @@
 					<!-- Testimonial box 3 -->
 					<div class="testimonial-grid-box">
 						<div class="testimonial-img">
-							<img src="assets/images/award_3.png" alt="">
+							<img src="assets/images/awards_3.png" alt="">
 						</div>
 						<div class="testimonial-content">
 							<h5 class="font-weight-normal margin-top-10">Draper University | 20??</h5>
@@ -325,7 +328,7 @@
 					<!-- Testimonial box 4 -->
 					<div class="testimonial-grid-box">
 						<div class="testimonial-img">
-							<img src="assets/images/award_4.png" alt="">
+							<img src="assets/images/awards_4.png" alt="">
 						</div>
 						<div class="testimonial-content">
 							<h5 class="font-weight-normal margin-top-10">E27 | 20??</h5>
@@ -335,7 +338,7 @@
 					<!-- Testimonial box 5 -->
 					<div class="testimonial-grid-box">
 						<div class="testimonial-img">
-							<img src="assets/images/award_5.png" alt="">
+							<img src="assets/images/awards_5.png" alt="">
 						</div>
 						<div class="testimonial-content">
 							<h5 class="font-weight-normal margin-top-10">SkyDeck | 20??</h5>
